--- a/divy/style.css
+++ b/divy/style.css
@@ -6,3 +6,23 @@ div{
    background-color: aquamarine;
    border: 5px violet groove
    }
+
+div{
+   background-color: blueviolet;
+}
+
+.zolty{
+   background-color: yellow;
+}
+
+.szeroki{
+   width: 600px;
+}
+
+#czerwony{
+   background-color: red;
+}
+
+footer{
+   
+}
