--- a/kosmos/style.css
+++ b/kosmos/style.css
@@ -32,6 +32,9 @@
 
 .offers{
    background-color: #17171A;
+   display: flex;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
 }
 
 .offers-single{
@@ -39,7 +42,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   background-color: goldenrod;
+   margin: 20px;
    width: 256px;
 }
 
@@ -55,10 +58,11 @@
    font-weight: 500;
    color: #fff;
    text-transform: uppercase;
+   text-align: center;
 }
 
 .offers-single p{
-   margin-bottom: 10px;
+   margin-bottom: 20px;
    font-family: sans-serif;
    font-weight: normal;
    color: #fff;
@@ -79,4 +83,27 @@
 
 .offers-single a:hover{
    background-color: #fff;
+}
+
+/* NAVBAR------------------------------------ */
+
+.navbar{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   height:  80px;
+   background-color: #fff;
+   }
+
+na
+
+.navbar a img{
+   height: 80px;
+}
+
+.navbar ul{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   list-style: none;
 }
