--- a/fortnite/style.css
+++ b/fortnite/style.css
@@ -1,5 +1,6 @@
 *{
    margin: 0;
+   padding: 0;
 }
 
 .hidden{
@@ -7,21 +8,45 @@
 }
 
 .nawigacja{
-   display: flex;
-   align-items: center;
-   padding-right: 20px;
    height: 80px;
    width: 100%;
-   background-color: red;
 }
 
 .nawigacja a img{
-   margin: 20px;
+   position: absolute;
+   left: 20px; 
+   top: 20px;
 }
 
 section{
-   width: 100%;
+   position: relative;
+   width: 1280px;
    height: 600px;
    background-image: url(img/tlo.png);
-   background-repeat: no-repeat;
+   background-repeat: no-repeat; 
    }
+
+.ludzik{
+   position: absolute;
+   bottom: 0;
+}
+
+.balon{
+   position: absolute;
+   top: -100px;
+   right: -220px;
+   z-index: 999;
+}
+
+.logo{
+   position: absolute;
+   bottom: 70px;
+   left: 50px;
+}
+
+.logo2{
+   position: absolute;
+   bottom: 0;
+   right: 0;
+   z-index: 9998;
+}
